--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="static/css/style.css">
   <link rel="stylesheet" href="static/css/public.css">
   <title>IvyPlus - Vývoz a podpora vývozu do Vietnamu</title>
-  <meta name="description" content="Ivy Plus s.r.o. se zaměřuje především na vývoz a podporu vývozu do Vietnamu.">
+  <meta name="description" content="Ivývoz a podpora vývozu do Vietnamu.">
   <meta name="keywords" content="Ivy Plus, IvyPlus, vývoz do Vietnamu, export do Vietnamu, obchodování s Vietnamem, byznys ve Vietnamu, vietnamci v ČR, tygr, ekonomický tygr, vietnamský export, vietnamský import, vietnamský trh, zbraně do Vietnamu, specialista na Vietnam">
   <meta property="og:title" content="IvyPlus">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ivyplus.cz">
-  <meta property="og:description" content="Ivy Plus s.r.o., vývoz do Vietnamu, export Vietnam">
+  <meta property="og:description" content="Ivy Plus s.r.o., vývoz do Vietnamu, Water turbine, water power plant, export Vietnam">
   <meta property="og:image" content="https://ivyplus.cz/static/img/solidlogo.png">
   <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
