--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
 
     <div class="note">
         Stránky jsou momentálně v přestavbě.<br>
+        <p>Ale když už jste tady… proč si na chvilku neodpočinout?</p>
+        <p>🎮 Zkuste si zahrát tuto hru a dejte si pauzu. Relax si zaslouží každý!</p>
         Trang web hiện đang được nâng cấp.
+        <p>Nhưng nếu bạn đã đến đây rồi... sao không thư giãn một chút?</p>
+  <p>🎮 Hãy thử chơi trò chơi này và nghỉ ngơi nhé. Ai cũng xứng đáng được thư giãn!</p>
+
     </div>
 
     <div class="countdown" id="countdown"></div>
