--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IvyPlus – Ikony a loga</title>
-    <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="static/img/ifavicon.ico" type="image/x-icon">
+    <link rel="icon" href="static/img/ifavicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,26 +57,26 @@
 
     <div class="icon-block">
         <h2>Favicon</h2>
-        <img src="static/img/favicon.ico" alt="Favicon">
-        <p class="desc">Soubor: static/img/favicon.ico</p>
+        <img src="static/img/ifavicon.ico" alt="Favicon">
+        <p class="desc">Soubor: static/img/ifavicon.ico</p>
     </div>
 
     <div class="icon-block">
         <h2>Bílé logo</h2>
-        <img src="static/img/whitelogo.png" alt="Logo bílé">
-        <p class="desc">Soubor: static/img/whitelogo.png</p>
+        <img src="static/img/iwhitelogo.png" alt="Logo bílé">
+        <p class="desc">Soubor: static/img/iwhitelogo.png</p>
     </div>
 
     <div class="icon-block">
         <h2>Modré (navy) logo</h2>
-        <img src="static/img/navylogo.png" alt="Logo navy">
-        <p class="desc">Soubor: static/img/navylogo.png</p>
+        <img src="static/img/inavylogo.png" alt="Logo navy">
+        <p class="desc">Soubor: static/img/inavylogo.png</p>
     </div>
 
     <div class="icon-block">
         <h2>Open Graph obrázek (pro sociální sítě)</h2>
-        <img src="https://ivyplus.cz/static/img/solidlogo.png" alt="OG obrázek">
-        <p class="desc">URL: https://ivyplus.cz/static/img/solidlogo.png</p>
+        <img src="static/img/isolidlogo.png" alt="OG obrázek">
+        <p class="desc">URL:static/img/isolidlogo.png</p>
     </div>
 
     <div class="note">
